Fix dashbaord charts and accordion buttons not blurring on task expand, prevent page scrolling when task is expanded and move duplicated CSS into App.css

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -60,6 +60,15 @@ h1 {
   align-items: center;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
+.unfocussed {
+  opacity: 40%;
+  pointer-events: none;
+}
+
 div.status {
   display: flex;
   justify-content: center;
