--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -10,11 +10,6 @@
   overflow-y: hidden;
 }
 
-.dashboard .unfocussed {
-  opacity: 40%;
-  pointer-events: none;
-}
-
 .dashboard > .accordion-wrapper > .button-container {
   display: flex;
   justify-content: flex-end;
